force-app/main/default/objects/Cruise_Upgrade__c/Cruise_Upgrade__c.object-meta.xml
<CustomObject>
    <label>Cruise Upgrade</label>
    <nameField>
        <displayFormat>CU-{000000}</displayFormat>
        <label>Cruise Upgrade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruise Upgrades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>