force-app/main/default/objects/Cruise_Upgrade__c/fields/Cruise_CP__c.field-meta.xml
<CustomField>
    <fullName>Cruise_CP__c</fullName>
    <label>Cruise CP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>