force-app/main/default/objects/Cruise_Upgrade__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Internal notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>