force-app/main/default/objects/Cruise_Upgrade__c/fields/Include_Amount__c.field-meta.xml
<CustomField>
    <fullName>Include_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Amount</label>
    <type>Checkbox</type>
</CustomField>