force-app/main/default/objects/Cruise_Upgrade__c/fields/Nett__c.field-meta.xml
<CustomField>
    <fullName>Nett__c</fullName>
    <label>Nett</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>