force-app/main/default/objects/Cruise_Upgrade__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;On Hold&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>