force-app/main/default/objects/Cruise_Upgrade__c/fields/TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order__c</fullName>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>Cruise Upgrades</relationshipLabel>
    <relationshipName>Cruise_Upgrades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>