force-app/main/default/objects/Cruise_Upgrade__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <inlineHelpText>(Net-CruiseCP) *1.2 + 50$ perpax</inlineHelpText>
    <label>Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>