force-app/main/default/objects/Cruise_Upgrade__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabin</fullName>
            </value>
            <value>
                <fullName>Shore Excursions</fullName>
            </value>
            <value>
                <fullName>Drinks Package</fullName>
            </value>
            <value>
                <fullName>Laundy Package</fullName>
            </value>
            <value>
                <fullName>Gratuities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>